force-app/main/default/objects/iMC_Support_Survey__c/iMC_Support_Survey__c.object-meta.xml
<CustomObject>
    <description>This is used to capture and store support, product, and inproduct surveys.  IT creates and send the surveys to SFDC.</description>
    <label>iMC Support Survey</label>
    <nameField>
        <label>Surveys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iMC Support Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>