force-app/main/default/objects/iMC_Support_Survey__c/fields/Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Accessibility__c</fullName>
    <description>Support Survey</description>
    <label>Accessibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>