force-app/main/default/objects/iMC_Support_Survey__c/fields/Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback__c</fullName>
    <description>In Product Survey, Random Survey, Support Survey</description>
    <label>Additional Feedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>