force-app/main/default/objects/iMC_Support_Survey__c/fields/CD_Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>CD_Overall_Rating__c</fullName>
    <description>Random Survey</description>
    <label>CD Overall Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>