force-app/main/default/objects/iMC_Support_Survey__c/fields/CD_Uses__c.field-meta.xml
<CustomField>
    <fullName>CD_Uses__c</fullName>
    <description>Random Survey</description>
    <label>CD Uses</label>
    <length>50</length>
    <type>Text</type>
</CustomField>