force-app/main/default/objects/iMC_Support_Survey__c/fields/Changes_to_Higher_Rating__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Higher_Rating__c</fullName>
    <description>What changes would we have to make for you to give us a higher rating?</description>
    <label>Changes to Higher Rating?</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>