force-app/main/default/objects/iMC_Support_Survey__c/fields/Customer_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_User_Email__c</fullName>
    <description>In Product Survey, Random Survey, Support Survey</description>
    <label>Customer User Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>