force-app/main/default/objects/iMC_Support_Survey__c/fields/Flagged__c.field-meta.xml
<CustomField>
    <fullName>Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[12/22/15, JK]: Created for Lesa Hiben to flag Surveys for her report to Mark Fordham.</description>
    <inlineHelpText>See Lesa with questions.</inlineHelpText>
    <label>Flagged</label>
    <type>Checkbox</type>
</CustomField>