force-app/main/default/objects/iMC_Support_Survey__c/fields/Goal_Accomplished__c.field-meta.xml
<CustomField>
    <fullName>Goal_Accomplished__c</fullName>
    <description>primary use is implementation survey</description>
    <label>Goal Accomplished</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>