force-app/main/default/objects/iMC_Support_Survey__c/fields/iMC_Support_Survey_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Support_Survey_Record_ID__c</fullName>
    <label>iMC Support Survey Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>