force-app/main/default/objects/iMC_Support_Survey__c/fields/Implementation_Process_Changes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Process_Changes__c</fullName>
    <description>In your opinion, what are 1 – 2 specific changes you would make to implementation process?</description>
    <label>Implementation Process Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>