force-app/main/default/objects/iMC_Support_Survey__c/fields/Main_Reason_for_Recommendation_Rating__c.field-meta.xml
<CustomField>
    <fullName>Main_Reason_for_Recommendation_Rating__c</fullName>
    <description>Random Survey</description>
    <label>Main Reason for Recommendation Rating</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>