force-app/main/default/objects/iMC_Support_Survey__c/fields/of_Promoters__c.field-meta.xml
<CustomField>
    <fullName>of_Promoters__c</fullName>
    <formula>IF(Promoter_Type__c = &quot;Promoter&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Promoters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>