force-app/main/default/objects/iMC_Support_Survey__c/fields/of_Surveys__c.field-meta.xml
<CustomField>
    <fullName>of_Surveys__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Surveys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>