force-app/main/default/objects/iMC_Support_Survey__c/fields/Overall_Sales_Experience_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Overall_Sales_Experience_Ranking__c</fullName>
    <description>Random Survey</description>
    <label>Overall Sales Experience Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>