force-app/main/default/objects/iMC_Support_Survey__c/fields/Overall_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Service_Experience__c</fullName>
    <description>Random Survey, Support Survey</description>
    <label>Overall Service Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>