force-app/main/default/objects/iMC_Support_Survey__c/fields/Preparation__c.field-meta.xml
<CustomField>
    <fullName>Preparation__c</fullName>
    <description>Primary use is for implementation survey</description>
    <label>Preparation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>