force-app/main/default/objects/iMC_Support_Survey__c/fields/Product_Features_Rating__c.field-meta.xml
<CustomField>
    <fullName>Product_Features_Rating__c</fullName>
    <description>Support Survey</description>
    <label>Product Features Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>