force-app/main/default/objects/iMC_Support_Survey__c/fields/Product_Performance_Speed__c.field-meta.xml
<CustomField>
    <fullName>Product_Performance_Speed__c</fullName>
    <description>Random Survey</description>
    <label>Product Performance/Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>