force-app/main/default/objects/iMC_Support_Survey__c/fields/Promoter_Type__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Type__c</fullName>
    <formula>IF(Recommendation_Probability__c &lt;= 6,&quot;Detractor&quot;,
 IF(Recommendation_Probability__c = 7 || Recommendation_Probability__c = 8,&quot;Passive&quot;,
 IF(Recommendation_Probability__c &gt;= 9,&quot;Promoter&quot;,
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter Type</label>
    <type>Text</type>
</CustomField>