force-app/main/default/objects/iMC_Support_Survey__c/fields/Recommendation_Probability__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Probability__c</fullName>
    <description>In Product Survey, Random Survey, Support Survey</description>
    <label>Recommendation Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>