force-app/main/default/objects/iMC_Support_Survey__c/fields/Request_for_Information__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Information__c</fullName>
    <description>Random Survey</description>
    <label>Request for Information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>