force-app/main/default/objects/iMC_Support_Survey__c/fields/System_User_Action__c.field-meta.xml
<CustomField>
    <fullName>System_User_Action__c</fullName>
    <description>In Product Survey</description>
    <label>System User Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>