force-app/main/default/objects/iMC_Support_Survey__c/fields/Technical_Knowledge_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Knowledge_Skills__c</fullName>
    <description>Support Survey</description>
    <label>Technical Knowledge &amp; Skills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>