force-app/main/default/objects/iMC_Support_Survey__c/fields/Zendesk_Agent__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Agent__c</fullName>
    <inlineHelpText>Zendesk agent assigned to the record</inlineHelpText>
    <label>Zendesk Agent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam Zalt</fullName>
            </value>
            <value>
                <fullName>Armando Aceves</fullName>
            </value>
            <value>
                <fullName>Brendan Kussman</fullName>
            </value>
            <value>
                <fullName>Habib Daof</fullName>
            </value>
            <value>
                <fullName>Joseph Sterner</fullName>
            </value>
            <value>
                <fullName>Kevin Lewis</fullName>
            </value>
            <value>
                <fullName>Michael Ferraro</fullName>
            </value>
            <value>
                <fullName>Robert Walker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>