force-app/main/default/objects/iMC_Support_Survey__c/recordTypes/iMC_Implementation_Survey.recordType-meta.xml
<RecordType>
    <fullName>iMC_Implementation_Survey</fullName>
    <active>true</active>
    <label>iMC Implementation Survey</label>
</RecordType>