force-app/main/default/objects/iMC_Support_Survey__c/recordTypes/iMC_NPS_Survey.recordType-meta.xml
<RecordType>
    <fullName>iMC_NPS_Survey</fullName>
    <active>true</active>
    <label>iMC NPS Survey</label>
</RecordType>