force-app/main/default/objects/iMC_Support_Survey__c/recordTypes/iMC_Support_Survey.recordType-meta.xml
<RecordType>
    <fullName>iMC_Support_Survey</fullName>
    <active>true</active>
    <label>iMC Support Survey</label>
</RecordType>