force-app/main/default/objects/iMC_Support_Survey__c/recordTypes/iMC_Survey.recordType-meta.xml
<RecordType>
    <fullName>iMC_Survey</fullName>
    <active>true</active>
    <label>iMC Survey</label>
</RecordType>