force-app/main/default/objects/iMC_Support_Survey__c/listViews/All_Created_This_Month.listView-meta.xml
<ListView>
    <fullName>All_Created_This_Month</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Recommendation_Probability__c</columns>
    <columns>Promoter_Type__c</columns>
    <columns>Changes_to_Higher_Rating__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Main_Reason_for_Recommendation_Rating__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>All Created This Month</label>
</ListView>