force-app/main/default/objects/iMC_Support_Survey__c/listViews/All_Created_This_Year1.listView-meta.xml
<ListView>
    <fullName>All_Created_This_Year1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Comment_Type__c</columns>
    <columns>Recommendation_Probability__c</columns>
    <columns>Promoter_Type__c</columns>
    <columns>Changes_to_Higher_Rating__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Main_Reason_for_Recommendation_Rating__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2016 12:00 AM</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>@luckie</value>
    </filters>
    <label>All Created This Year</label>
</ListView>