force-app/main/default/objects/iMC_Support_Survey__c/listViews/All_Implementation.listView-meta.xml
<ListView>
    <fullName>All_Implementation</fullName>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Courtesy__c</columns>
    <columns>Professionalism__c</columns>
    <columns>Quality__c</columns>
    <columns>Recommendation_Probability__c</columns>
    <columns>Technical_Knowledge_Skills__c</columns>
    <columns>Timeliness__c</columns>
    <columns>Additional_Feedback__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>contains</operation>
        <value>implementation</value>
    </filters>
    <label>All Implementation</label>
    <language>en_US</language>
</ListView>