force-app/main/default/objects/iMC_Support_Survey__c/listViews/All_Modified_Today.listView-meta.xml
<ListView>
    <fullName>All_Modified_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Recommendation_Probability__c</columns>
    <columns>Changes_to_Higher_Rating__c</columns>
    <columns>Main_Reason_for_Recommendation_Rating__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Jason Klovski</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>iMC_Support_Survey__c.iMC_Survey</value>
    </filters>
    <label>All Modified Today</label>
</ListView>