force-app/main/default/objects/iMC_Support_Survey__c/listViews/FlightReady_Survey.listView-meta.xml
<ListView>
    <fullName>FlightReady_Survey</fullName>
    <columns>NAME</columns>
    <columns>Survey_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>ImplementationCase__c</columns>
    <columns>Overall_Satisfaction__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Recommendation_Probability__c</columns>
    <columns>Professionalism__c</columns>
    <columns>Timeliness__c</columns>
    <columns>Consultation__c</columns>
    <columns>Preparation__c</columns>
    <columns>Technical_Knowledge_Skills__c</columns>
    <columns>Follow_up_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Getfeedback</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/30/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2016 12:00 AM</value>
    </filters>
    <label>FlightReady Getfeeback Survey</label>
</ListView>