force-app/main/default/objects/iMC_Support_Survey__c/listViews/iMC_Survey_Queue_iMC_Support_Survey.listView-meta.xml
<ListView>
    <fullName>iMC_Survey_Queue_iMC_Support_Survey</fullName>
    <filterScope>Queue</filterScope>
    <label>iMC - Survey Queue</label>
    <queue>iMC_Survey_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>