force-app/main/default/objects/iMC_Support_Survey__c/listViews/In_Product_Surveys.listView-meta.xml
<ListView>
    <fullName>In_Product_Surveys</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Promoter_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>inproduct</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>11/10/2016 12:00 AM</value>
    </filters>
    <label>In Product Surveys</label>
</ListView>