force-app/main/default/objects/iMC_Support_Survey__c/listViews/In_Product_Surveys_Open.listView-meta.xml
<ListView>
    <fullName>In_Product_Surveys_Open</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Recommendation_Probability__c</columns>
    <columns>Promoter_Type__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>Account__c</columns>
    <columns>Customer_User_Email__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>inproduct</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>In-Product Surveys - Open</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>