force-app/main/default/objects/iMC_Support_Survey__c/listViews/In_Product_Surveys_Today.listView-meta.xml
<ListView>
    <fullName>In_Product_Surveys_Today</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Survey_Type__c</columns>
    <columns>Recommendation_Probability__c</columns>
    <columns>Additional_Feedback__c</columns>
    <columns>System_User_Action__c</columns>
    <columns>Customer_User_Email__c</columns>
    <columns>Account__c</columns>
    <columns>CD_Overall_Rating__c</columns>
    <columns>CD_Uses__c</columns>
    <columns>Case__c</columns>
    <columns>Follow_up_Request__c</columns>
    <columns>Main_Reason_for_Recommendation_Rating__c</columns>
    <columns>Quality__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>inproduct</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>In-Product Surveys - Today</label>
    <language>en_US</language>
</ListView>